// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Label/HoverInfoLabel Hover Info Label 1`] = `
<div>
  <p
    class="MuiTypography-root makeStyles-noWrap makeStyles-display MuiTypography-body1"
    title="hover info"
  >
    Some label
    <span />
  </p>
</div>
`;

exports[`Storyshots Label/HoverInfoLabel Hover Info Label Info 1`] = `
<div>
  <p
    class="MuiTypography-root makeStyles-noWrap makeStyles-display MuiTypography-body1"
  >
    Some label
    <span />
  </p>
</div>
`;

exports[`Storyshots Label/HoverInfoLabel Icon Position 1`] = `
<div>
  <p
    class="MuiTypography-root makeStyles-noWrap makeStyles-display MuiTypography-body1"
  >
    <span />
    Some label
  </p>
</div>
`;

exports[`Storyshots Label/HoverInfoLabel Label Props 1`] = `
<div>
  <p
    class="MuiTypography-root makeStyles-noWrap makeStyles-display MuiTypography-body2"
  >
    Some label
    <span />
  </p>
</div>
`;
